# opencv_cam

./: CMakeLists.txt  README.md  main.cpp
include/: face_detect.h
src/: face_detect.cpp
